--- a/rps/src/Components/App/App.css
+++ b/rps/src/Components/App/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Staatliches&display=swap');
 
 .App {
     display: flex;
@@ -14,26 +14,68 @@
 .score {
     margin-top: 100px;
     margin-bottom: 100px;
-    font-size: 200px;
+    font-size: 230px;
+    text-align: center;
 }
 input {
-    width: 500px;
+    height: 90px;
+    width: 600px;
+    text-align: center;
+    font-size: 40px;
+    font-weight: bolder;
+    font-family: 'Staatliches', cursive;;
+    background-color: bisque;
+    /* border: 1px solid rgba(255, 228, 196, 0.2) */
+    border-radius: 8px;
 }
 
 h1 {
     text-align: center;
-    font-size: 90px;
+    font-size: 230px;
+    margin-top: 0px;
     margin-bottom: 0px;
 }
 
 p {
     margin-top: 0px;
+    font-family: 'Staatliches', cursive;
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
 }
 
 button {
     width: 500px;
     height: 200px;
-    font-size: 50px;
+    font-size: 60px;
     font-family: 'Bungee Spice';
     background-color: bisque;
+    color: black;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+button:hover {
+    width: 500px;
+    height: 200px;
+    font-size: 60px;
+    font-family: 'Bungee Spice';
+    background-color: rgba(255, 228, 196, 0.7);
+    color: black;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.title-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
