--- a/rps/src/Components/App/App.css
+++ b/rps/src/Components/App/App.css
@@ -1,81 +1,84 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Staatliches&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Staatliches&display=swap");
 
 .App {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-family: 'Bungee Spice', cursive;
-    background-color: black;
-    height: 100vh;
-    width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Bungee Spice", cursive;
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
 }
 
 .score {
-    margin-top: 100px;
-    margin-bottom: 100px;
-    font-size: 230px;
-    text-align: center;
+  margin-top: 50px;
+  margin-bottom: 120px;
+  font-size: 230px;
+  text-align: center;
+  text-shadow: 3px 3px bisque;
 }
 input {
-    height: 90px;
-    width: 600px;
-    text-align: center;
-    font-size: 40px;
-    font-weight: bolder;
-    font-family: 'Staatliches', cursive;;
-    background-color: bisque;
-    /* border: 1px solid rgba(255, 228, 196, 0.2) */
-    border-radius: 8px;
+  height: 90px;
+  width: 600px;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bolder;
+  font-family: "Staatliches", cursive;
+  background-color: bisque;
+  border: 3px solid grey;
+  border-radius: 8px;
 }
 
 h1 {
-    text-align: center;
-    font-size: 230px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+  text-align: center;
+  font-size: 240px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-shadow: 3px 3px bisque;
 }
 
 p {
-    margin-top: 0px;
-    font-family: 'Staatliches', cursive;
-    font-size: 50px;
-    font-weight: bold;
-    color: white;
+  margin-top: -20px;
+  font-family: "Staatliches", cursive;
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
 }
 
 button {
-    width: 500px;
-    height: 200px;
-    font-size: 60px;
-    font-family: 'Bungee Spice';
-    background-color: bisque;
-    color: black;
-    cursor: pointer;
-    border-radius: 8px;
+  width: 500px;
+  height: 200px;
+  font-size: 60px;
+  font-family: "Bungee Spice";
+  background-color: bisque;
+  color: black;
+  cursor: pointer;
+  border-radius: 8px;
+  text-shadow: 2px 2px black;
 }
 
 button:hover {
-    width: 500px;
-    height: 200px;
-    font-size: 60px;
-    font-family: 'Bungee Spice';
-    background-color: rgba(255, 228, 196, 0.7);
-    color: black;
-    cursor: pointer;
-    border-radius: 8px;
+  width: 500px;
+  height: 200px;
+  font-size: 60px;
+  font-family: "Bungee Spice";
+  background-color: rgba(255, 228, 196, 0.7);
+  color: black;
+  cursor: pointer;
+  border-radius: 8px;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .title-page {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
