--- a/rps/src/Components/App/App.css
+++ b/rps/src/Components/App/App.css
@@ -46,7 +46,28 @@ p {
   color: white;
 }
 
-button {
+img {
+  width: 50px;
+  /* margin: 0px 5px; */
+}
+
+.top-bar {
+  /* margin: 0 60px; */
+  position: absolute;
+  top: 30px;
+  /* right: 60px; */
+  display: flex;
+  width: calc(100% - 100px);
+  justify-content: space-between;
+  /* gap: 5px; */
+}
+
+.hearts {
+  display: flex;
+  gap: 5px;
+}
+
+.buttons button {
   width: 500px;
   height: 200px;
   font-size: 60px;
@@ -58,7 +79,7 @@ button {
   text-shadow: 2px 2px black;
 }
 
-button:hover {
+.buttons button:hover {
   width: 500px;
   height: 200px;
   font-size: 60px;
@@ -67,7 +88,33 @@ button:hover {
   color: black;
   cursor: pointer;
   border-radius: 8px;
+  text-shadow: 2px 2px black;
 }
+
+.return {
+  height: 55px;
+  width: 200px;
+  font-size: 30px;
+  font-family: "Bungee Spice";
+  background-color: bisque;
+  color: black;
+  cursor: pointer;
+  border-radius: 8px;
+  text-shadow: 2px 2px black;
+}
+
+.return:hover {
+    height: 55px;
+    width: 200px;
+    font-size: 30px;
+    font-family: "Bungee Spice";
+    background-color: rgba(255, 228, 196, 0.7);
+    color: black;
+    cursor: pointer;
+    border-radius: 8px;
+    text-shadow: 2px 2px black;
+  }
+  
 
 .content {
   display: flex;
