--- a/rps/src/Components/App/App.css
+++ b/rps/src/Components/App/App.css
@@ -104,17 +104,47 @@ img {
 }
 
 .return:hover {
-    height: 55px;
-    width: 200px;
-    font-size: 30px;
-    font-family: "Bungee Spice";
-    background-color: rgba(255, 228, 196, 0.7);
-    color: black;
-    cursor: pointer;
-    border-radius: 8px;
-    text-shadow: 2px 2px black;
-  }
-  
+  height: 55px;
+  width: 200px;
+  font-size: 30px;
+  font-family: "Bungee Spice";
+  background-color: rgba(255, 228, 196, 0.7);
+  color: black;
+  cursor: pointer;
+  border-radius: 8px;
+  text-shadow: 2px 2px black;
+}
+
+.play-again {
+  height: 55px;
+  width: 240px;
+  font-size: 30px;
+  font-family: "Bungee Spice";
+  background-color: bisque;
+  color: black;
+  cursor: pointer;
+  border-radius: 8px;
+  text-shadow: 2px 2px black;
+}
+
+.play-again:hover {
+  height: 55px;
+  width: 240px;
+  font-size: 30px;
+  font-family: "Bungee Spice";
+  background-color: rgba(255, 228, 196, 0.7);
+  color: black;
+  cursor: pointer;
+  border-radius: 8px;
+  text-shadow: 2px 2px black;
+}
+
+.game-over {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
 .content {
   display: flex;
@@ -122,6 +152,13 @@ img {
   justify-content: center;
   align-items: center;
 }
+
+.game {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
 .title-page {
   display: flex;
@@ -131,6 +168,6 @@ img {
 }
 
 .message {
-    margin-top: 100px;
-    margin-bottom: 0px;
+  margin-top: 100px;
+  margin-bottom: 0px;
 }
